# Quiet-Pytest

./: .gitignore  README.md  install.sh  pyproject.toml  quiet-pytest.md  uninstall.sh
.github/workflows/: test.yml
docs/: reddit-post.md
examples/: AGENTS.md  usage.md
quiet-pytest/: SKILL.md  quiet-pytest
quiet-pytest/agents/: openai.yaml
tests/: test_quiet_pytest.py
